# assemblyscript-unittest-framework

./: .clang-format  .clang-tidy  .eslintrc.cjs  .gitignore  .gitmodules  .prettierignore  CMakeLists.txt  README.md  as-test.config.js  as-test.config.warpo.js  config.d.ts  eslint.config.mjs  jest.config.mjs  jest.config.ts  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS
.github/action/setup-ccache/: action.yml  post.sh
.github/workflows/: ci-test.yml  publish.yml
assembly/: assertCollector.ts  default.ts  diytest.ts  env.ts  eslint.config.mjs  expect.ts  implement.ts  index.ts  mockInstrument.ts  output.ts
docs/: api-documents.md  examples.md  index.md  quick-start.md  release-note.md
docs/.vitepress/: config.ts
docs/api-documents/: configuration.md  coverage-report.md  index.md  matchers.md  mock-function.md  options.md  return-code.md  setup-teardown.md
docs/examples/: mock-method.md
docs/technical-details/: code-debug-info.md
example/: as-test.config.cjs  as-test.config.js  package-lock.json  package.json  source.test.ts  source2.test.ts
example/lib/: env.ts
example/tests/: source.test.ts  source2.test.ts
instrumentation/: BasicBlockAnalysis.hpp  BasicBlockWalker.cpp  BasicBlockWalker.hpp  CMakeLists.txt  CovInstrumentationWalker.cpp  CoverageInstru.cpp  CoverageInstru.hpp  MockInstrumentationWalker.cpp  MockInstrumentationWalker.hpp  main.cpp  wasm-instrumentation.d.ts
scripts/: build_instrumentation.js  esbuild.js
src/: assertResult.ts  executionResult.ts  index.ts  interface.ts  tsconfig.json
src/core/: analyze.ts  compile.ts  compiler.ts  covRecorder.ts  execute.ts  executionRecorder.ts  execution_recorder.ts  instrument.ts  mockStatusRecorder.ts  precompile.ts
src/generator/: index.ts
src/generator/html-generator/: genCode.ts  index.ts
src/parser/: index.ts  singleFileAnalysis.ts  singleFunctionAnalysis.ts
src/type/: global.d.ts
src/utils/: ascWrapper.ts  errorTraceHandler.ts  import.ts  index.ts  pathResolver.ts  projectRoot.ts  wasmparser.ts
tests-as/: diytest.test.ts
tests-ts/test/parser/: singleFileAnalysis.test.ts  singleFunctionAnalysis.test.ts
tests-ts/test/parser/__snapshots__/: parser.test.ts.snap
tests/as/: comparison.test.ts  default.test.ts  expect.test.ts  format.test.ts  mock.test.ts
tests/cpp/: CMakeLists.txt  e2e.cpp  fuzz.cpp  lit.cpp
tests/cpp/lit/: run.cjs
tests/cpp/lit/covInstrument/: do_while.wast.debug.json  do_while_break.wast.debug.json  do_while_continue.wast.debug.json  do_while_once.wast.debug.json  exit_basicBlock.wast.debug.json  for_loop_break.wast.debug.json  for_loop_continue.wast.debug.json  for_loop_return.wast.debug.json  if_else.wast.debug.json  if_elseif_empty_else.wast.debug.json  if_empty_else.wast.debug.json  if_multi_condition.wast.debug.json  include_exclude.wast.debug.json  multi_func.wast.debug.json  multi_if_else.wast.debug.json  switch_case_fallthrough.wast.debug.json  unreachable.wast  unreachable.wast.debug.json  while.wast.debug.json  while_break.wast.debug.json  while_continue.wast.debug.json
tests/cpp/lit/expectInstrument/: expect.test.wasm.map
tests/cpp/utils/: utils.cpp  utils.h
tests/e2e/: run.js
tests/e2e/assertFailed/: as-test.config.js  assertOnInit.test.ts  assertOnTest.test.ts  source.test.ts  stdout.txt
tests/e2e/compilationFailed/: as-test.config.js  incorrect.test.ts  stdout.txt
tests/e2e/isolated-cli/: as-test.config.js  env.ts  stdout.txt  succeed_0.test.ts  succeed_1.test.ts
tests/e2e/isolated-false/: as-test.config.js
tests/e2e/isolated-true/: as-test.config.js  stdout.txt
tests/e2e/on-failure-only/: as-test.config.js  index.test.ts  stdout.txt
tests/e2e/printLogInFailedInfo/: as-test.config.js  source.test.ts  stdout.txt
tests/e2e/setup-teardown/: as-test.config.js  nest.test.ts  setup.test.ts  setup_out_of_block.test.ts  stdout.txt  teardown.test.ts
tests/e2e/testFiles/: failed.test.ts  stdout.txt  succeed_0.test.ts
tests/ts/: tsconfig.json
tests/ts/e2e/: default.test.ts
tests/ts/fixture/: assertResultTest.expectInfo.json  defaultImportTest.wasm  withSourceMapURL.wasm
tests/ts/test/: assertResult.test.ts  executionResult.test.ts
tests/ts/test/__snapshots__/: assertResult.test.ts.snap  executionResult.test.ts.snap
tests/ts/test/core/: analyze.test.ts  executionRecorder.test.ts  execution_recorder.test.ts  instrument.test.ts  mockStatusRecorder.test.ts  precompile.test.ts  throwError.test.ts
tests/ts/test/core/__snapshots__/: analyze.test.ts.snap  instrument.test.ts.snap  precompile.test.ts.snap
tests/ts/test/parser/: parser.test.ts  singleFileAnalysis.test.ts  singleFunctionAnalysis.test.ts
tests/ts/test/parser/__snapshots__/: parser.test.ts.snap
tests/ts/test/utils/: import.test.ts  index.test.ts  path.test.ts  utils.test.ts  wasmparser.test.ts
transform/: listFunctions.mts  listTestNames.mjs  listTestNames.mts  tsconfig.json  tsconfig.tsbuildinfo
